--- a/projects.html
+++ b/projects.html
@@ -111,10 +111,16 @@
                     <h2>Continuous Integration/Continuous Deployment (CI/CD) Projects</h2>
                     <div class="row">
                         <!-- Project cards for Terraform Projects -->
-                        <div id="terraform-project-1" class="col-md-12">
+                        <div id="commerce-app-1" class="col-md-12">
                             <div class="project-card">
-                                <h3>Commerce-App</h3>
-                                <p>This is a simple commerce-app project currently under construction, aimed at showcasing a CI process. The project involves building the app and publishing the artifacts to DockerHub and Nexus.</p>
+                                <h3>Commerce-App (CI)</h3>
+                                <p>This is a simple commerce-app project, aimed at showcasing a CI process. The project involves building the app and publishing the artifacts to DockerHub and Nexus.</p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Automated CI pipeline ensuring code quality and reliability.</li>
+                                    <li>Seamless integration with Docker for containerization.</li>
+                                    <li>Efficient storage and versioning of artifacts in Nexus.</li>
+                                </ul>
                                 <!-- Tools used -->
                                 <h4 class="tools-heading">Tools Used</h4>
                                 <div class="tool-boxes">
@@ -122,27 +128,33 @@
                                     <div class="tool-box">React</div>
                                     <div class="tool-box">GitHub</div>
                                     <div class="tool-box">Jenkins</div>
-                                    <div class="tool-box">DockerHub</div>
+                                    <div class="tool-box">Docker</div>
                                     <div class="tool-box">Nexus</div>
                                     <!-- Add more tools as needed -->
                                 </div>
                                 <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>                            
                         </div>
-                        <div id="terraform-project-2" class="col-md-12">
+                        <div id="commerce-app-2" class="col-md-12">
                             <div class="project-card">
-                                <h3>Simple Java Maven App pipeline</h3>
-                                <p>This repository contains Jenkins pipeline code to build and test NodeJS app.</p>
-                                <!-- Add more project details as needed -->
-                                <a href="https://github.com/Adexxy/simple-java-maven-app#simple-java-maven-app" class="btn btn-primary">View Details</a>
-                            </div>
-                        </div>
-                        <div id="terraform-project-3" class="col-md-12">
-                            <div class="project-card">
-                                <h3>Complete CI/CD Pipeline</h3>
-                                <p>This repository contains complete end-to-end Jenkins CI/CD pipeline.</p>
-                                <!-- Add more project details as needed -->
-                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                                <h3>Commerce-App (CD)</h3>
+                                <p>This is a simple commerce-app project, aimed at showcasing a CD process. The project involves building the app and publishing the artifacts to DockerHub and Nexus.</p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Automated and efficient deployment of the commerce application.</li>
+                                    <li>Utilization of GitOps principles for CD with ArgoCD.</li>
+                                    <li>Effective container orchestration and scaling with Kubernetes.</li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">GitHub</div>
+                                    <div class="tool-box">ArgoCD</div>
+                                    <div class="tool-box">Kubernetes</div>
+                                    <div class="tool-box">Docker</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
                         <!-- Add more project cards for Terraform Projects -->
@@ -154,36 +166,88 @@
                     <h2>Infrastructure as Code (IaC) Projects</h2>
                     <div class="row">
                         <!-- Project cards for Terraform Projects -->
-                        <div id="terraform-project-4" class="col-md-12">
+                        <div id="iac-1" class="col-md-12">
                             <div class="project-card">
                                 <h3>Terraform AWS - CloudFormation</h3>
                                 <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
-                                <!-- Add more project details as needed -->
-                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Terraform</div>
+                                    <div class="tool-box">AWS</div>
+                                    <div class="tool-box">AWS-CloudFormation</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
-                        <div id="terraform-project-5" class="col-md-12">
+                        <div id="iac-2" class="col-md-12">
                             <div class="project-card">
                                 <h3>Terraform AWS - EKS</h3>
                                 <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
-                                <!-- Add more project details as needed -->
-                                <a href="https://github.com/Adexxy/terraform-aws-eks#aws-eks-terraform-module" class="btn btn-primary">View Details</a>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Terraform</div>
+                                    <div class="tool-box">AWS</div>
+                                    <div class="tool-box">AWS-EKS</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
-                        <div id="terraform-project-6" class="col-md-12">
+                        <div id="iac-3" class="col-md-12">
                             <div class="project-card">
                                 <h3>Terraform Virtualbox Ansible - Kubespray</h3>
                                 <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy kubernetes cluster using kubespray to the VMs.</p>
-                                <!-- Add more project details as needed -->
-                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Terraform</div>
+                                    <div class="tool-box">AWS</div>
+                                    <div class="tool-box">AWS-EKS</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
-                        <div id="terraform-project-6" class="col-md-12">
+                        <div id="ica-4" class="col-md-12">
                             <div class="project-card">
                                 <h3>Vagrant Virtualbox</h3>
                                 <p>This repository contains Vagrant code to provision local VM's for local testing environment.</p>
-                                <!-- Add more project details as needed -->
-                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Vangrant</div>
+                                    <div class="tool-box">Ansible</div>
+                                    <div class="tool-box">VirtualBox</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
                         <!-- Add more project cards for Terraform Projects -->
@@ -191,13 +255,19 @@
                 </div>
                 <!-- NodeJS Projects -->
                 <div id="terraform-projects" class="project-category">
-                    <h2>Infrastructure as Code Projects</h2>
+                    <h2>Infrastructure Orchestration and Management</h2>
                     <div class="row">
                         <!-- Project cards for Terraform Projects -->
                         <div id="terraform-project-7" class="col-md-12">
                             <div class="project-card">
-                                <h3>Creation of Kuberbetes cluster on bare metal server</h3>
-                                <p>This repository contains Vagrant and Terraform code to provision VMs using VirtualBox VM's or bare metal and an Ansible playbook to deploy an application to the VMs.</p>
+                                <h3>Bare Metal Kubernetes Cluster Deployment with Kubespray</h3>
+                                <p>This project focuses on setting up and managing Kubernetes clusters on bare metal servers, enabling efficient orchestration of applications and services. The repository was cloned on Github and used for this project.</p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Successful deployment of Kubernetes clusters on bare metal servers.</li>
+                                    <li>Automation of deployment and scaling processes using Ansible </li>
+                                    <li>Streamlined management and monitoring of applications in the bare metal Kubernetes environment.</li>
+                                </ul>
                                 <!-- Tools used -->
                                 <h4 class="tools-heading">Tools Used</h4>
                                 <div class="tool-boxes">
@@ -205,6 +275,8 @@
                                     <div class="tool-box">Terraform</div>
                                     <div class="tool-box">Ansible</div>
                                     <div class="tool-box">Kubernetes</div>
+                                    <div class="tool-box">Kubespray</div>
+                                    <div class="tool-box">Bare Metal Server</div>
                                     <!-- Add more tools as needed -->
                                 </div>
                                 <!-- Add more project details as needed -->
@@ -213,20 +285,50 @@
                         </div>
                         <div class="col-md-12">
                             <div id="terraform-project-8" class="project-card">
-                                <h3>Terraform Virtualbox Kubespray</h3>
-                                <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
+                                <h3>Application Performance Monitoring (APM) Implementation</h3>
+                                <p>This project involves the implementation of Application Performance Monitoring (APM) tools to monitor the performance and health of critical applications, ensuring optimal user experience.</p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Real-time monitoring and visualization of application performance.</li>
+                                    <li>Proactive identification and resolution of performance issues.</li>
+                                    <li>Enhanced application reliability and improved user experience.</li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Prometheus</div>
+                                    <div class="tool-box">Grafana</div>
+                                    <div class="tool-box">Kubernetes</div>
+                                    <div class="tool-box">Docker</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
                                 <!-- Add more project details as needed -->
-                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                                <a href="https://github.com/Adexxy/kubespray" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
-                        <div id="terraform-project-9" class="col-md-12">
-                            <div class="project-card">
-                                <h3>Terraform Virtualbox Ansible</h3>
-                                <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
+                        <div class="col-md-12">
+                            <div id="terraform-project-8" class="project-card">
+                                <h3>Incident Management and Escalation Automation</h3>
+                                <p>This project focuses on automating incident management and escalation processes, ensuring rapid incident response and minimal downtime for critical systems.</p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Automated incident detection and categorization based on severity and impact.</li>
+                                    <li>Immediate and appropriate escalations to the respective on-call personnel.</li>
+                                    <li>Reduction in incident resolution time and improved service availability.</li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Slack</div>
+                                    <div class="tool-box">Grafana</div>
+                                    <div class="tool-box">Prometheus</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
                                 <!-- Add more project details as needed -->
-                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                                <a href="https://github.com/Adexxy/kubespray" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
+
                         <!-- Add more project cards for Terraform Projects -->
                     </div>
                 </div>
