--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                             </p>
                             <!-- List of projects -->
                             <ul>
-                                <li><a href="projects.html#terraform-project-1">Commerce-App</a></li>
+                                <li><a href="projects.html#commerce-app-1">Commerce-App (CI)</a></li>
+                                <li><a href="projects.html#commerce-app-2">Commerce-App (CD)</a></li>
                                 <!-- Add more projects as needed -->
                             </ul>
 
@@ -122,8 +123,10 @@
                             </p>
                             <!-- List of projects -->
                             <ul>
-                                <li><a href="projects.html#terraform-project-8">Creation of Kuberbetes cluster on bare metal server</a></li>
-                                <li><a href="projects.html#terraform-project-8">AWS infrastrusture</a></li>
+                                <li><a href="projects.html#iac-1">Infra 1</a></li>
+                                <li><a href="projects.html#iac-2">Infra 2</a></li>
+                                <li><a href="projects.html#iac-3">Infra 2</a></li>
+                                <li><a href="projects.html#iac-3">Infra 2</a></li>
                                 <!-- Add more projects as needed -->
                             </ul>
                             <a class="btn btn-link p-0" href="projects.html">View All Projects<link rel="stylesheet" href=""> <i class="fa fa-angle-right"></i></a>
@@ -134,7 +137,7 @@
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-1.jpg" alt="Image">
                         </div>
                         <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Site Reliability Engineering and Monitoring</h3>
+                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Infrastructure Orchestration and Management</h3>
                             <!-- <div class="d-flex mb-3">
                                 <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
                                 <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
@@ -145,8 +148,8 @@
                             </p>
                             <!-- List of projects -->
                             <ul>
-                                <li><a href="projects.html#terraform-project-8">Site Reliabilty Engineering</a></li>
-                                <li><a href="projects.html#terraform-project-8">Monitoring</a></li>
+                                <li><a href="projects.html#terraform-project-8">Application Performance Monitoring (APM) Implementation</a></li>
+                                <li><a href="projects.html#terraform-project-8">Incident Management and Escalation Automation</a></li>
                                 <!-- Add more projects as needed -->
                             </ul>
                             <a class="btn btn-link p-0" href="projects.html">View All Projects<link rel="stylesheet" href=""> <i class="fa fa-angle-right"></i></a>
