--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                            <a class="btn btn-link p-0" href="projects.html">View All Projects<link rel="stylesheet" href=""> <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
-                    <div class="row blog-item px-3 pb-5">
+                    <!-- <div class="row blog-item px-3 pb-5">
                         <div class="col-md-5">
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-1.jpg" alt="Image">
                         </div>
@@ -131,7 +131,7 @@
                             </ul>
                             <a class="btn btn-link p-0" href="projects.html">View All Projects<link rel="stylesheet" href=""> <i class="fa fa-angle-right"></i></a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row blog-item px-3 pb-5">
                         <div class="col-md-5">
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-1.jpg" alt="Image">
