--- a/index.html
+++ b/index.html
@@ -107,31 +107,7 @@
                            <a class="btn btn-link p-0" href="projects.html">View All Projects<link rel="stylesheet" href=""> <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
-                    <!-- <div class="row blog-item px-3 pb-5">
-                        <div class="col-md-5">
-                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-1.jpg" alt="Image">
-                        </div>
-                        <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Infrastructure as Code Projects</h3>
-                            <!-- <div class="d-flex mb-3">
-                                <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
-                                <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
-                            </div> -->
-                            <p>
-                                This is a display of projects requiring IaaC to provision and manage servers
-                            </p>
-                            <!-- List of projects -->
-                            <ul>
-                                <li><a href="projects.html#iac-1">Infra 1</a></li>
-                                <li><a href="projects.html#iac-2">Infra 2</a></li>
-                                <li><a href="projects.html#iac-3">Infra 2</a></li>
-                                <li><a href="projects.html#iac-3">Infra 2</a></li>
-                                <!-- Add more projects as needed -->
-                            </ul>
-                            <a class="btn btn-link p-0" href="projects.html">View All Projects<link rel="stylesheet" href=""> <i class="fa fa-angle-right"></i></a>
-                        </div>
-                    </div> -->
+                    
                     <div class="row blog-item px-3 pb-5">
                         <div class="col-md-5">
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-1.jpg" alt="Image">
@@ -148,8 +124,9 @@
                             </p>
                             <!-- List of projects -->
                             <ul>
-                                <li><a href="projects.html#terraform-project-8">Application Performance Monitoring (APM) Implementation</a></li>
-                                <li><a href="projects.html#terraform-project-8">Incident Management and Escalation Automation</a></li>
+                                <li><a href="projects.html#sre-1">Bare Metal Kubernetes Cluster Deployment with Kubespray</a></li>
+                                <li><a href="projects.html#sre-2">Application Performance Monitoring (APM) Implementation</a></li>
+                                <li><a href="projects.html#sre-3">Incident Management and Escalation Automation</a></li>
                                 <!-- Add more projects as needed -->
                             </ul>
                             <a class="btn btn-link p-0" href="projects.html">View All Projects<link rel="stylesheet" href=""> <i class="fa fa-angle-right"></i></a>
