--- a/projects.html
+++ b/projects.html
@@ -179,10 +179,10 @@
                     <h2>Deployment of Microservices</h2>
                     <div class="row">
                         <!-- Project cards for Microservices Projects -->
-                        <div id="commerce-app-1" class="col-md-12">
+                        <div id="microservice-1" class="col-md-12">
                             <div class="project-card">
                                 <h3>Google Microservices</h3>
-                                <p>This is a simple commerce-app project, aimed at showcasing a CI process. The project involves building the app and publishing the artifacts to DockerHub and Nexus.</p>
+                                <p>This project is a google demo microservices included in my portfolio to showcase the deployment of microservices-based application. The architecture is designed with modularity, scalability, and flexibility in mind.</p>
                                 <h4 class="tools-heading">Key Achivements</h4>
                                 <ul>
                                     <li>Automated CI pipeline ensuring code quality and reliability.</li>
@@ -200,30 +200,8 @@
                                     <div class="tool-box">Nexus</div>
                                     <!-- Add more tools as needed -->
                                 </div>
-                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
+                                <a href="https://github.com/Adexxy/microservices-demo.git#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>                            
-                        </div>
-                        <div id="commerce-app-2" class="col-md-12">
-                            <div class="project-card">
-                                <h3>Commerce-App (Continuous Develpment)</h3>
-                                <p>This is a simple commerce-app project, aimed at showcasing a CD process. The project involves building the app and publishing the artifacts to DockerHub and Nexus.</p>
-                                <h4 class="tools-heading">Key Achivements</h4>
-                                <ul>
-                                    <li>Automated and efficient deployment of the commerce application.</li>
-                                    <li>Utilization of GitOps principles for CD with ArgoCD.</li>
-                                    <li>Effective container orchestration and scaling with Kubernetes.</li>
-                                </ul>
-                                <!-- Tools used -->
-                                <h4 class="tools-heading">Tools Used</h4>
-                                <div class="tool-boxes">
-                                    <div class="tool-box">GitHub</div>
-                                    <div class="tool-box">ArgoCD</div>
-                                    <div class="tool-box">Kubernetes</div>
-                                    <div class="tool-box">Docker</div>
-                                    <!-- Add more tools as needed -->
-                                </div>
-                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
-                            </div>
                         </div>
                         <!-- Add more project cards for Terraform Projects -->
                     </div>
