--- a/projects.html
+++ b/projects.html
@@ -227,8 +227,9 @@
                                     <div class="tool-box">Nexus</div>
                                     <!-- Add more tools as needed -->
                                 </div>
-                                <a href="https://github.com/Adexxy/microservices-demo.git#readme" class="btn btn-primary view-details-link">View Details</a>
-                            </div>                            
+                                <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
+                            </div>                           
                         </div>
                         <!-- Add more project cards for Terraform Projects -->
                     </div>
@@ -260,8 +261,8 @@
                                     <div class="tool-box">Bare Metal Server</div>
                                     <!-- Add more tools as needed -->
                                 </div>
-                                <!-- Add more project details as needed -->
-                                <a href="https://github.com/Adexxy/kubespray" class="btn btn-primary view-details-link">View Details</a>
+                                <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
                         <div class="col-md-12">
@@ -283,8 +284,8 @@
                                     <div class="tool-box">Docker</div>
                                     <!-- Add more tools as needed -->
                                 </div>
-                                <!-- Add more project details as needed -->
-                                <a href="https://github.com/Adexxy/kubespray" class="btn btn-primary view-details-link">View Details</a>
+                                <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
                         <div class="col-md-12">
@@ -305,8 +306,8 @@
                                     <div class="tool-box">Prometheus</div>
                                     <!-- Add more tools as needed -->
                                 </div>
-                                <!-- Add more project details as needed -->
-                                <a href="https://github.com/Adexxy/kubespray" class="btn btn-primary view-details-link">View Details</a>
+                                <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
 
