--- a/projects.html
+++ b/projects.html
@@ -261,7 +261,7 @@
                                     <div class="tool-box">Bare Metal Server</div>
                                     <!-- Add more tools as needed -->
                                 </div>
-                                <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
+                                <img class="img-fluid mb-4 mb-md-0" src="img/kubespray.jpg" alt="Image">
                                 <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
